# cedar

./: .gitignore  .hgignore  .hgrc  .travis.yml  CMakeLists.txt  INSTALL  cedar.conf  cedar.conf.example  changelog.md  changelog.txt  license.txt  readme.md  readme.txt  troubleshooting.md
cedar/: CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  cedarAux.h  cedarDev.h  cedarDyn.h  cedarProc.h  cedarUnits.h  defines.h  lib.h.in  (+2 more)
src/auxiliaries/: Base.cpp  Base.h  CMakeLists.txt  ConfigurationInterface.cpp  ConfigurationInterface.h  LogFile.cpp  LogFile.h  Namespace.h  Thread.cpp  Thread.h  UserData.cpp  UserData.h  namespace.h
src/auxiliaries/exceptions/: ExceptionBase.cpp  ExceptionBase.h  IndexOutOfRangeException.cpp  IndexOutOfRangeException.h  Namespace.h  NullPointerException.cpp  NullPointerException.h  namespace.h
src/auxiliaries/gl/: Block.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Viewer.h  drawShapes.cpp  drawShapes.h  namespace.h
src/auxiliaries/gui/: namespace.h
src/auxiliaries/math/: AlgebraTools.cpp  AlgebraTools.h  Limits.h  Namespace.h  Sigmoids.cpp  Sigmoids.h  Tools.cpp  algebraTools.cpp  algebraTools.h  coordinateTransformations.cpp  coordinateTransformations.h  namespace.h  screwCalculus.cpp  screwCalculus.h  sigmoids.cpp  sigmoids.h  tools.cpp  tools.h
src/devices/: CMakeLists.txt
src/devices/robot/: Component.cpp  Component.h  ComponentNotAvailableException.cpp  ComponentNotAvailableException.h  KinematicChain.cpp  KinematicChain.h  KinematicChainModel.h  Namespace.h  ReferenceGeometry.cpp  ReferenceGeometry.h  Robot.cpp  Robot.h
(+3679 files in other folders)
